--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
+
+    <data>
+        <import type="org.bedu.appweather.utils.WeatherUtils" />
+        <variable
+            name="viewModel"
+            type="org.bedu.appweather.mainModule.viewModel.MainViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".mainModule.view.MainActivity">
 
       <com.google.android.material.textview.MaterialTextView
           android:id="@+id/tv_timezone"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:text="@{viewModel.result.timezone.replace(`_`, ` `)}"
           tools:text="TIMEZONE"
           android:textAppearance="?attr/textAppearanceHeadline4"
           android:textColor="@color/deep_orange_a200"
@@ -27,7 +35,7 @@
             android:id="@+id/tv_currentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Current Weather:"
+            android:text="@string/main_current_weather_title"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:textColor="@color/brown_200"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceHeadline6"
+                android:text="@{@string/weather_temp(viewModel.result.current.temp)}"
                 tools:text="234 °c"
                 android:textColor="@color/deep_orange_a200"
                 android:gravity="center"
@@ -65,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
                 tools:text="22:00"
-
+                android:text="@{@string/weather_dt(WeatherUtils.INSTANCE.getHour(viewModel.result.current.dt))}"
                 app:layout_constraintStart_toStartOf="parent"
 
                 app:layout_constraintTop_toTopOf="@+id/tv_temperature"
@@ -78,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
                 tools:text="Clouds"
+                android:text="@{WeatherUtils.INSTANCE.getWeatherMain(viewModel.result.current.weather)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -89,6 +99,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceOverline"
                 tools:text="Humidity: 65%"
+                android:text="@{@string/weather_humidity(viewModel.result.current.humidity)}"
                 app:layout_constraintStart_toStartOf="@+id/tv_date"
                 app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
                 />
@@ -100,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceCaption"
                 tools:text="Few Clouds"
+                android:text="@{WeatherUtils.INSTANCE.getWeatherDescription(viewModel.result.current.weather)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_main"
                 />
